2007-07-13  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c:
	Ignore styles in all child contexts when use-style="no" is used.
	DefinitionChild.override_style_deep, Context.ignore_children_style:
	new struct members;
	(context_new): new argument, ignore_children_style;
	Context.ignore_children_style is propagated from parent context if not
	set explicitely.
	(_gtk_source_context_data_finish_parse): do not require error
	argument to be non-NULL.

	* gtksourceview/gtksourceview/gtksourcelanguage-parser-1.c:
	(_gtk_source_language_file_parse_version1): call
	_gtk_source_context_data_finish_parse(), this unbreaks loading old lang
	files.

	* gtksourceview/language-specs/check.sh: use a list of version-1 files,
	and check the rest.

2007-07-13  Steve Frécinaux  <code@istique.net>

	* gtksourceview/language-specs/perl.lang: fix highlighting of
	<<HEREDOC; (bug #456436). Patch by Eric Norige.

2007-07-12  Steve Frécinaux  <code@istique.net>

	* gtksourceview/language-specs/perl.lang: new lang file, much more
	complete than the old one, designed to stick as closely as possible to
	what /usr/bin/perl does.:
	 - pattern highlighting
	 - heredoc
	 - POD
	 - ...

2007-07-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview-utils.c: look in the correct dir
	for legacy lang files.

2007-07-10  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (regex_new), (regex_resolve):
	* gtksourceview/gtksourcelanguage-parser-2.c (expand_regex_vars),
	(expand_regex_delimiters), (expand_regex):
	Use static variables for often used regexes instead of using
	g_regex_match_simple().
	Use G_REGEX_NEWLINE_LF with all regexes to workaround bug #455640.

	* gtksourceview/language-specs/changelog.lang:
	parse little more dates, do not break when empty lines are not actually
	empty but contain whitespace.

2007-07-10  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcestylescheme.c: add description getter.
