@@ -1,3 +1,8 @@
+2007-07-13  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourcestylescheme.[ch]: add a filename
+	property and the relative getter.
+
 2007-07-13  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/gtksourcecontextengine.c:
